--- a/_includes/head.html
+++ b/_includes/head.html
@@ -139,7 +139,7 @@
 
   {% if page.comments and site.staticman.repository and site.staticman.branch %}
   <link rel="stylesheet" href="{{ "/assets/css/staticman.css" | relative_url }}">
-  <link rel="shortcut icon" type="image/ico" href="z.ico">
+  <link rel="shortcut icon" type="image/ico" href="/assets/img/z.ico">
   {% endif %}
 
   {% if page.head-extra %}
